<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/general">
            <menu>
                <item
                    android:id="@+id/quake_list"
                    android:title="@string/quake_list" />
                <item
                    android:id="@+id/behavior_advisor"
                    android:title="@string/behavior_advisor" />
                <item
                    android:id="@+id/lexicon"
                    android:title="@string/lexicon" />
                <item
                    android:id="@+id/faq"
                    android:title="@string/faq" />
                <item
                    android:id="@+id/imprint"
                    android:title="@string/imprint" />
            </menu>
        </item>
        <item android:title="@string/austria">
            <menu>
                <item
                    android:id="@+id/overview"
                    android:title="@string/overview" />
                <item
                    android:id="@+id/quake_hazard"
                    android:title="@string/quake_hazard" />
                <item
                    android:id="@+id/strongest_quakes"
                    android:title="@string/strongest_quakes" />
            </menu>
        </item>
    </group>
</menu>
