<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tgm.shakeit.quakewatchaustria.ContactPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contact_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/last_page_hint"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_comment"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_contact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/mail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/mail_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/mail_info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/zamg_mail_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fab_colorDisabled="@color/divider"
        app:fab_icon="@drawable/ic_send_white_24dp"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccentPressed" />
</android.support.design.widget.CoordinatorLayout>
