<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tgm.shakeit.quakewatchaustria.LocationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/loc_hint"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_PLZ_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_PLZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plz"
                android:inputType="textPostalAddress"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_loc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/town"
                android:inputType="textPostalAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/loc_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fab_colorDisabled="@color/divider"
        app:fab_icon="@drawable/ic_arrow_forward_white_24dp"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccentPressed"
        fab:fab_title="aktuelles Beben" />

</android.support.design.widget.CoordinatorLayout>
